# AC

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
ac/: ablation_fit.py  architecture.py  auto_calibrate.py  baseline.py  baseline_delta.py  budget_pareto.py  cli_compile.py  cli_delta_eval.py  cli_matrix18b.py  cli_recipe.py  cli_stress.py  cli_trust_audit.py  decision.py  delta_engine.py  evaluator.py  implementation_generator.py  justification.py  justify_transition.py  ladder_plan.py  lattice_engine.py  modifier.py  operational_flags.py  optimizer.py  optimizer_bridge.py  pareto_position.py  penalties.py  pricing.py  quality_defaults.yaml  quality_model.py  quality_stress.py  rank.py  report.py  schema.py  serving_workload.py  shadow_prices.py  sram_derivation.py  stress.py  throughput_model.py  transition.py  trust_audit.py
ac/calibration/: b200_calibration.json  family_bias_v1.json  h100_calibration.json  tpu_v5p_calibration.json
ac/deltas/: __init__.py  add_state_layers.py  base.py  change_moe_topology.py  change_parallelism.py  change_precision_per_component.py  densify_first_k.py  interleave_local_attention.py  scale_d_model.py  scale_n_layers.py  swap_attention_to_gqa.py  swap_attention_to_mla.py  swap_attention_to_swa.py
ac/hardware_specs/: b200.json  gb200_nvl72.json  h100_sxm.json  h800.json  tpu_v5e.json  tpu_v5p.json  trainium2.json  trainium3.json
ac/packaged_configs/: mai_thinking_1.json
ac/pricing_specs/: b200.json  h100.json  tpu_v5e.json  tpu_v5p.json  trainium2.json  trainium3.json
assets/: anchor_report.md  anchors.json
assets/c_nvl72/: prereg.md  prereg_amendment1.md  prereg_amendment2.md  readme_rows_snippet.md  report.md
assets/e1_perf/: ac_predictions.json  anchors.fragment.json  anchors_e1_parsed.json  (+3 more)
configs/: gpt_oss_120b.json  mai_thinking_1.json  mistral_7b.json
examples/: audit.sh  lab_measurements.example.jsonl
scripts/: _regen20t_coarse_shards.py  fill_arch_dim_prices.py  golden_snapshot.sh  probe_invariants.py  rechunk_web_data.py  regen20t_driver.py  regen_golden_matrix.py  run_trust_audit.py
tests/: _generator_payload.py  emit_decision_grid.py  slim_web_payload.py  test_anchor_registry_ledger.py  test_architecture_signature.py  test_architecture_wiring.py  test_auto_calibrate_wave5.py  test_budget_pareto.py  test_cell_output_schema.py  test_cli_smoke.py  test_compressed_attention.py  test_decision_assessment.py  test_decode_allreduce_realism.py  test_delta_registry_contracts.py  test_effective_quality_model.py  test_ep72_pareto.py  test_ep_domain_routing.py  test_evaluator_units.py  test_family_view.py  test_feasibility_guards.py  test_golden_matrix.py  test_hardware_precision_model.py  test_known_arch_picked.py  test_known_arch_predictions.py  test_local_global_interleave.py  test_matrix_driver_integrity.py  test_matrix_invariants.py  test_moe_throughput_and_ep.py  test_nvfp4_mxfp8_precision.py  test_nvl72_system_spec.py  test_operational_flags.py  test_optimize_across_contexts.py  test_optimizer_self_consistency.py  test_packaged_configs_sync.py  test_paired_decisions_and_ladders.py  test_picker_tiebreaks_and_contenders.py  test_pp_decode_serving.py  test_pp_search.py  test_pricing.py  test_public_model_anchors.py  (+12 more)
(+152 files in other folders)
