[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ac-architecture-compiler"
version = "0.3.0"
description = "Hardware-aware Transformer-architecture compiler. Maps (hardware, workload, quality budget) to recommended architecture (dense, MoE, hybrid state-attention)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "AC contributors"}]
keywords = ["transformer", "architecture-search", "moe", "mla", "pareto", "scaling-laws"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ac-compile     = "ac.cli_compile:main"
ac-delta-eval  = "ac.cli_delta_eval:main"
ac-stress      = "ac.cli_stress:main"
ac-auto-calibrate = "ac.auto_calibrate:main"

[project.urls]
Homepage = "https://github.com/your-org/ac"
Issues   = "https://github.com/your-org/ac/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ac*"]

[tool.setuptools.package-data]
ac = [
    "hardware_specs/*.json",
    "calibration/*.json",
    "quality_defaults.yaml",
]
