[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "archc"
version = "0.4.0"
description = "Hardware-aware Transformer-architecture compiler. Maps (hardware, workload, quality budget) to recommended architecture (dense, MoE, hybrid state-attention)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "AC contributors"}]
keywords = ["transformer", "architecture-search", "moe", "mla", "pareto", "scaling-laws"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ac-compile     = "ac.cli_compile:main"
ac-delta-eval  = "ac.cli_delta_eval:main"
ac-stress      = "ac.cli_stress:main"
ac-auto-calibrate = "ac.auto_calibrate:main"
ac-matrix-18b  = "ac.cli_matrix18b:main"
ac-trust-audit = "ac.cli_trust_audit:main"

[project.urls]
Homepage = "https://github.com/AntheaLi/AC"
Issues   = "https://github.com/AntheaLi/AC/issues"
Demo     = "https://antheali.github.io/ac-demo/"
Changelog = "https://github.com/AntheaLi/AC/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["ac*"]

[tool.setuptools.package-data]
ac = [
    "hardware_specs/*.json",
    "calibration/*.json",
    "quality_defaults.yaml",
    "packaged_configs/*.json",
    "pricing_specs/*.json",
]
